--- a/relation_manyToOne/bookOutlet/bookApp/templates/bookApp/bookDetails.html
+++ b/relation_manyToOne/bookOutlet/bookApp/templates/bookApp/bookDetails.html
@@ -6,11 +6,11 @@
     <title>Document</title>
 </head>
 <body>
-
+    <h1>Book Details</h1>
     <ul>
-        <li>Book Name: {{Book.title}}</li>
-        <li>Book Description: {{Book.Description}}</li>
-        <li>Book Rating: {{Book.Rating}} </li>
+        <li>Book Name: {{Book.title}}<li>
+        </li>Book Description: {{Book.description}}<li>
+        </li>Book Rating: {{Book.rating}}</li>
     </ul>
     
 
