--- a/blog/blogSystem/blog/templates/blog/postDelete.html
+++ b/blog/blogSystem/blog/templates/blog/postDelete.html
@@ -6,16 +6,11 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="/"><h1>HOME</h1></a>
-
-
-    <h3>Post create page</h3>
-    
-    <form method='post'>
+    <h1>Confirm Delete?!</h1>
+    <form action="" method="post">
         {% csrf_token %}
-        {{form}}
-        <input type="submit" value="Create Post">
+        <input type="submit" value="Delete">
     </form>
     
 </body>
-</html> 
+</html>
